--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -1,5 +1,8 @@
-<pre><h1 style="color:pink;">
-hello {{name}}! welcome to the app
+<!doctype html>
+<link href="https://fonts.googleapis.com/css?family=Alegreya" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+
+<h1>
+1000 Songs for You + Pitchfork Reviews: A Flask/Python/SQLAlchemy Application
 </h1>
-</pre>
-other instructions here
+<p>This application will let you search through the song available in a playlist on Spotify; specifically, <a href="https://open.spotify.com/playlist/4Dg0J0ICj9kKTGDyFu0Cv4?si=K8WGBb1YQambb0X-IqK5xQ">"The Longest Mixtape: 1000 Songs for You"</a> by Caribou. </p>
