--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
+    font-size: 11px;
 }
 
 h1 {
@@ -16,4 +16,11 @@ a {
 a:hover{
     background-color: #000000;
     color: #FFFFFF;
+    font-style:italic;
+}
+
+#container{
+    width: 600px;
+    margin: 0 auto;
+
 }
