--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -2,8 +2,11 @@
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/stylesheet.css') }}">
 
+<div id="container">
 <h1>
 1000 Songs for You + Pitchfork Reviews: <br>
 A Flask/Python/SQLAlchemy Application
 </h1>
+<p>Hey {{ name }}! Thanks for checking out this mini app.</p>
 <p>This application will let you search through the song available in a playlist on Spotify; specifically, <a href="https://open.spotify.com/playlist/4Dg0J0ICj9kKTGDyFu0Cv4?si=K8WGBb1YQambb0X-IqK5xQ">"The Longest Mixtape: 1000 Songs for You"</a> by Caribou. </p>
+</div>
