--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,16 +1,44 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 11px;
+    font-family: 'IBM Plex Serif', serif;
+    font-size: 10pt;
+    color: #4b4b4b;
+}
+
+#container{
+    width: 600px;
+    margin-top: 50px;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+
+}
+
+img {
+    display: block;
+    width: 90%;
+    margin: auto;
+}
+
+#index-grid{
+    display:grid;
+    grid-template-columns: auto 1fr;
+    grid-gap: 15px;
+    align-items: center;
 }
 
 h1 {
-    font-family: 'IBM Plex Serif', serif;
+    font-family: 'Playfair Display', serif;
     font-size: 30px;
     letter-spacing: 0.5px;
 }
 
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size: 12pt;
+}
+
 a {
-    color: rgb(27, 138, 158);
+    color: rgb(120, 156, 179);
 }
 
 a:hover{
@@ -19,8 +47,25 @@ a:hover{
     font-style:italic;
 }
 
-#container{
-    width: 600px;
-    margin: 0 auto;
-
+strong, b {
+    font-weight:bolder;
+    background-color: rgb(240, 234, 236);
 }
+
+.review-text{
+    padding: 15px;
+    background-color: #e4e4e4;
+    line-height: 12pt;
+    font-style: italic;
+}
+
+.suggestions{
+    padding: 30px;
+    margin-top: 20px;
+    background-color: rgb(240, 234, 236);
+}
+
+
+
+
+
