finalized test suite

--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -31,6 +31,7 @@ Available route paths
     <li><h2>/check/song/(song title)</h2> - will see if a song with this name is available</li>
     <li><h2>/check/arist/(artist name)</h2> - will check if this artist has any songs in this playlist</li>
 </ul>
+Please note these routes are all case-sensitive! Please be sure you are using correct capitalization and puncutation in the URLs.
 </p>
 <p>
 Try these suggested routes:
