--- a/templates/not_available.html
+++ b/templates/not_available.html
@@ -7,14 +7,15 @@
 
 <body>
     <div id="container">
-        <h1>You looked up "{{ artist }}". Here are the search results:</h1>
+        
         {% if artist %}
-    
+        <h1>You looked up "{{ artist }}". Here are the search results:</h1>
         <p>"{{ track }}" by {{ artist }}, from the album <i>{{ album }}</i>, is in this playlist.</p>
         <p>However, there doesn't seem to be a Pitchfork review associated with the album this track is on. Sorry about that :( </p>
         <p>Maybe you could write one?</p>
     
         {% else %}
+        <h1>You looked up "{{ track }}". Here are the search results:</h1>
         <p>Doesn't look like this track exists in the playlist. Maybe try searching for another one?</p>
         {% endif %}
 
